--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,7 @@
-<h1>{{title}}</h1>
+<h1>Home</h1>
+
+<h2>{{title}}</h1>
 <p>Welcome to {{title}}</p>
+
+<a href="/movies">All movies</a>
+<button type="button" Select movie></button>
